<resources>
    <string name="app_name">Shiftapp</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="list_screen_title">Coffee Co Shifts</string>
    <string name="choose">Choose</string>
    <string name="in_role">In Role</string>
    <string name="with_color">With Color</string>
    <string name="create_new_shift">Add New Shift</string>
    <string name="shit_list">Shift List</string>
</resources>